--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
         "sweetalert2": "^11.7.1"
     }
 }
