--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.5",
         "symfony/http-client": "^5.4",
         "symfony/mailgun-mailer": "^5.4"
