--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.5",
+        "predis/predis": "^2.1",
         "pusher/pusher-php-server": "^7.2",
         "symfony/http-client": "^5.4",
         "symfony/mailgun-mailer": "^5.4"
