--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
+        "laravel-echo": "^1.15.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "pusher-js": "^8.0.2",
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
         "animate.css": "^4.1.1",
         "express": "^4.18.2",
         "http": "^0.0.1-security",
-        "laravel-echo": "^1.15.0",
+        "jquery": "^3.6.4",
         "socket.io": "^4.6.1",
         "socket.io-client": "^4.6.1",
         "sweetalert2": "^11.7.1"
